# dwe_camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  readme.md  setup.cfg
cfg/: CamSettings.cfg
config/: dwe_camera.yaml
dwe_camera/: dwe_camera_node.py
dwe_camera_interfaces/: CMakeLists.txt  package.xml
dwe_camera_msg/: CMakeLists.txt  package.xml
dwe_camera_msg/msg/: CamParameters.msg
dwe_camera_node/: setup.py
dwe_camera_node/config/: dwe_camera.yaml
dwe_camera_node/dwe_camera/: dwe_camera_node.py
dwe_camera_node/launch/: dwe_camera.launch.py
launch/: dwe_camera.launch
launch/include/: dwe_camera.launch.xml
msg/: CamParameters.msg
src/: image_resizer.py  run.py  v4l2_camera_node.py
