<?xml version="1.0"?>
<package format="3">
  <name>dwe_camera</name>
  <version>0.0.0</version>
  <description>dwe camera ros 2 package</description>
  <maintainer email="yweifu@uri.edu">Yuewei</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>dwe_camera_interfaces</depend>

  <depend>rcl_interfaces</depend> <!-- For parameter services -->
  <depend>launch_ros</depend> <!-- For launch file utilities -->
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>